--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "next": "13.5.5",
+    "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "eslint-config-next": "13.5.5",
+    "sass": "^1.69.4"
   }
 }
